# slurm-tutorial

./: CMakeLists.txt  run-experiment.sh
src/: vvadd.cc
